<resources>
    <string name="app_name">MantapKali</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="doesn_t_have_an_account">Doesn\'t have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="title_activity_tab">TabAct</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_nav">NavAct</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_income">Pemasukan</string>
    <string name="menu_outcome">Pengeluaran</string>
    <string name="menu_profile">Profile</string>

    <string name="profile_edit_akun">Edit Akun</string>
    <string name="profile_setting">Setting</string>
    <string name="profile_about">About</string>
    <string name="profile_aboutdesc">buatan kelompok MantapKali</string>

    <string name="add_transaksi">Add Record</string>
    <string name="add_transaksi_tanggal">11 DEC 2020</string>
    <string name="add_transaksi_dompet">Dompet 1</string>
    <string name="add_transaksi_deskripsi">Deskripsi</string>
    <string name="add_transaksi_harga">Harga</string>
    <string name="add_transaksi_cancel">CANCEL</string>
    <string name="add_transaksi_save">SAVE</string>
    <string name="add_transaksi_in">Pemasukan</string>
    <string name="add_transaksi_out">Pengeluaran</string>
    <string name="kelola_profil">Kelola Profil</string>
    <string name="tambah_profil">Tambah Profil</string>

</resources>