<?xml version="1.0" encoding="utf-8"?>
<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".ui.fragment.profileFragment">-->

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:text="@string/menu_profile" />-->

<!--</FrameLayout>-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.profileFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_lblue"
        android:elevation="10dp"
        android:text="@string/menu_profile"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/txtUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUser" />

    <TextView
        android:id="@+id/txtEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@color/light"

        android:clickable="true"
        android:drawablePadding="10dp"
        android:elevation="100dp"

        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"

        android:paddingRight="10dp"
        android:text="@string/profile_edit_akun"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/ic_baseline_edit_24"
        app:drawableRightCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserEmail" />

    <TextView
        android:id="@+id/txtSetting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@color/light"

        android:clickable="true"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"

        android:paddingRight="10dp"
        android:text="@string/profile_setting"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/ic_baseline_settings_24"
        app:drawableRightCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEdit" />

    <TextView
        android:id="@+id/txtLogout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@color/light"

        android:clickable="true"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"

        android:paddingRight="10dp"
        android:text="@string/logout"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/ic_logout"
        app:drawableRightCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSetting" />

    <TextView
        android:id="@+id/txtAbout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@color/light"

        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"

        android:text="@string/profile_about"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/ic_baseline_info_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogout" />

    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/light"

        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingStart="25dp"
        android:paddingEnd="10dp"

        android:text="@string/profile_aboutdesc"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAbout" />


</androidx.constraintlayout.widget.ConstraintLayout>